Split some stuff into math.coffee and gl.coffee

--- a/space.html
+++ b/space.html
@@ -1,4 +1,6 @@
 <canvas></canvas>
 <script src="atom.js"></script>
+<script src="math.js"></script>
+<script src="gl.js"></script>
 <script src="shaders.js"></script>
 <script src="space.js"></script>
