--- a/space.html
+++ b/space.html
@@ -1,4 +1,5 @@
 <canvas></canvas>
+<script src="cp.js"></script>
 <script src="atom.js"></script>
 <script src="math.js"></script>
 <script src="shaders.js"></script>
